--- a/src/main/resources/templates/layouts/common.html
+++ b/src/main/resources/templates/layouts/common.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtm" xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 	<body>
 		<nav class="navbar navbar-expand-lg fixed-top navbar-dark" layout:fragment="nav">
 			<div class="container">
 				<a class="navbar-brand" th:href="@{/topics}">
-					<img sec="/images/icons/logo.png" th:src="@{/images/icons/logo.png}" class="brand">
+					<img src="/images/icons/logo.png" th:src="@{/images/icons/logo.png}" class="brand">
 				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
@@ -21,13 +20,12 @@
 								</a>
 							</li>
 							<li class="nav-item">
-								<a classs="nav-lonk" th:href="@{/topics/new}">
+								<a classs="nav-link" th:href="@{/topics/new}">
 									<img src="/images/icons/camera.png" th:src="@{/images/icons/camera.png}">
 								</a>
 							</li>
 							<li class="nav-item">
-								<a th:href="@{/logout}" class="nav-link convert" data-method="post"
-									th:data-_csrf="${_csrf.token}">
+								<a th:href="@{/logout}" class="nav-link convert" data-method="post" th:data-_csrf="${_csrf.token}">
 									<img src="/images/icons/logout.png" th:src="@{/images/icons/logout.png}">
 								</a>
 							</li>
