--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,12 +13,12 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   z-index: 10000; }
 
-#message ul {
+#messages ul {
   background: rgba(255, 255, 255, 0.2);
   border-radius: 5px;
   padding: 4px;
   color: black; }
-  #message ul li {
+  #messages ul li {
     list-style: none;
     padding: 4px 8px;
     font-size: 18px; }
@@ -44,7 +44,7 @@ nav.navbar {
 .pages-index-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: url("/images/bg-top.png");
+  background-image: url("/images/IMG_2993.JPG");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -61,7 +61,7 @@ nav.navbar {
 .users-new-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: url("/images/bg-top.png");
+  background-image: url("/images/IMG_2993.JPG");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
