--- a/src/main/resources/static/scss/style.scss
+++ b/src/main/resources/static/scss/style.scss
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 	width: 100%;
 	z-index: 10000;
 }
-#message {
+#messages {
 	ul {
 		background: rgba(255, 255, 255, 0.2);
 		border-radius: 5px;
@@ -49,7 +49,7 @@ nav.navbar {
 .pages-index-wrapper {
 	width: 100vw;
 	height: 100vh;
-	background-image: url('/images/bg-top.png');
+	background-image: url('/images/IMG_2993.JPG');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -69,7 +69,7 @@ nav.navbar {
 .users-new-wrapper {
 	width: 100vw;
 	height: 100vh;
-	background-image: url('/images/bg-top.png');
+	background-image: url('/images/IMG_2993.JPG');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
